style: header responsiveness

--- a/index.html
+++ b/index.html
@@ -12,16 +12,20 @@
 </head>
 <body>
     <header>
-        <div>
-            <img src="./images/favicon.png" alt="logo digital college">
-            <h1>Digital Store</h1>
+        <div id="header-first-line">
+            <div id="logo">
+                <img src="./images/favicon.png" alt="logo digital college" />
+                <h1>Digital Store</h1>
+            </div>
             <form>
-                <input type="text" placeholder="Pesquisar produto...">
+                <input type="text" placeholder="Pesquisar produto..." />
                 <i class="fa fa-search"></i>
             </form>
-            <span><a href="#!">Cadastre-se</a></span>
-            <button>Entrar</button>
-            <a href="#!"><i class="fa fa-shopping-cart"></i></a>
+            <div id="header-actions">
+                <a href="#!" id="register">Cadastre-se</a>
+                <button>Entrar</button>
+                <a href="#!"><i class="fa fa-shopping-cart"></i></a>
+            </div>
         </div>
         <nav> 
             <ul>
