--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Store</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/banner.css">
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -36,5 +37,26 @@
             </ul>
         </nav>
     </header>
+
+    <!-- AQUI INICIA O BANNER -->
+    <div id="banner">
+        <div class="texts">
+            <h5>Melhores ofertas personalizadas</h5>
+            <h1>Queima de Estoque Nike 🔥</h1>
+            <p>Consequat culpa exercitation mollit nisi excepteur do do tempor laboris eiusmod irure consectetur</p>
+            <button><a href="" style="color: #FFFFFF"> Ver Ofertas</a></button>
+        </div>
+        <div class="sneakers">
+            <img src="images/Banner/White-Sneakers-PNG-Clipart 1.png" alt="">   
+            <button id="elipse1" style="top: 620px; left: 200px;"><a href="" style="color: #C92071;">⬤</a></button>
+            <button id="elipse2" style="top: 620px; left: 220px;"><a href="" style="color: #CCCCCC; ">⬤</a></button>
+            <button id="elipse3" style="top: 620px; left: 240px;"><a href="" style="color: #CCCCCC; ">⬤</a></button>
+            <button id="elipse4" style="top: 620px; left: 260px;"><a href="" style="color: #CCCCCC; ">⬤</a></button>
+        </div>
+        <div class="ornament">
+            <img src="images/Banner/Ornament 11.png" alt="">
+        </div>
+    </div>
+    <!-- AQUI TERMINA O BANNER -->
 </body>
 </html>
