--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Store</title>
+    <title>Digital Store - Home</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="css/banner.css">
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
@@ -58,7 +58,7 @@
         </div>
     </div>
     <!-- AQUI TERMINA O BANNER -->
-    
+
     <!-- AQUI INICIA O FOOTER -->
     <footer class="main-footer">
         <div class="container">
