--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         </div>
         <div class="sneakers">
             <img src="images/Banner/White-Sneakers-PNG-Clipart 1.png" alt="">   
-            <button id="elipse1" style="top: 620px; left: 200px;"><a href="" style="color: #C92071;">⬤</a></button>
-            <button id="elipse2" style="top: 620px; left: 220px;"><a href="" style="color: #CCCCCC; ">⬤</a></button>
-            <button id="elipse3" style="top: 620px; left: 240px;"><a href="" style="color: #CCCCCC; ">⬤</a></button>
-            <button id="elipse4" style="top: 620px; left: 260px;"><a href="" style="color: #CCCCCC; ">⬤</a></button>
+            <button id="elipse1"><a href="" style="color: #C92071;">⬤</a></button>
+            <button id="elipse2"><a href="" style="color: #CCCCCC;">⬤</a></button>
+            <button id="elipse3"><a href="" style="color: #CCCCCC;">⬤</a></button>
+            <button id="elipse4"><a href="" style="color: #CCCCCC;">⬤</a></button>
         </div>
         <div class="ornament">
             <img src="images/Banner/Ornament 11.png" alt="">
