--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Store</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="css/banner.css">
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/banner.css">
 
 </head>
 <body>
@@ -58,26 +58,21 @@
         </div>
     </div>
     <!-- AQUI TERMINA O BANNER -->
-  
     <section>
         <h2>
             Coleções em destaque
         </h2>
         <div class="destaque">
-            
             <div class="itens" style="
             background-image: url(./images/star-wars-storm-trooper-supreme-shirts-supreme-t-shirt-snoopy-clothing-apparel-t-shirt-text-transparent-png-616696\ 1\ \(1\).png);
             background-repeat: no-repeat;
             background-position: 165px 8px">
-
                 <div class="informacao">
-                <span>30% OFF</span>
+                <span class="desconto"><strong>30% OFF</strong></span>
                 <h1>Novo drop Supreme</h1>
                 <a href="#"><button>Comprar</button></a>
                 </div>
-
             </div>
-
             <div class="itens" style="
             background-image: url(./images/ddd\ 1.png);
             background-repeat: no-repeat;
@@ -85,7 +80,7 @@
             ">
 
                 <div class="informacao">
-                <span>30% OFF</span>
+                <span class="desconto"><strong>30% OFF</strong></span>
                 <h1>Coleção Adidas</h1>
                 <a href="#"><button>Comprar</button></a>
                 </div>
@@ -98,7 +93,7 @@
             background-position: 180px;">
 
                 <div class="informacao">
-                <span>30% OFF</span>
+                <span class="desconto"><strong>30% OFF</strong></span>
                 <h1>Novo Beats Bass</h1>
                 <a href="#"><button>Comprar</button></a>
                 </div>
@@ -145,29 +140,25 @@
         <h2>Produtos em alta</h2>
 
         <div class="produtosEmAlta">
-
             <div>
             <div class="produtos" style="
             background-image: url(./images/Layer\ 1aa\ 2.png);
             background-repeat: no-repeat;
             background-position: center;">
-            <span style="display: inline-flex;
-            margin: 1em;">30% OFF</span>
+            <span class="desconto"><strong>30% OFF</strong></span>
             </div>
             <h6>Tenis</h6>
             <p>K-Swiss V8 - Masculino 
             <span style="text-decoration:line-through;
             background: transparent;">$200</span>
-             <strong style="color: #1F1F1F;">$100</strong></p>
+            <strong style="color: #1F1F1F;">$100</strong></p>
             </div>
-
             <div>
                 <div class="produtos" style="
                 background-image: url(./images/Layer\ 1aa\ 2.png);
                 background-repeat: no-repeat;
                 background-position: center;">
-                <span style="display: inline-flex;
-                margin: 1em;">30% OFF</span>
+                <span class="desconto"><strong>30% OFF</strong></span>
                 </div>
                 <h6>Tenis</h6>
                 <p>K-Swiss V8 - Masculino <span style="text-decoration:line-through;
@@ -314,6 +305,6 @@
             </div>
         </div>
     </footer>
-  
+
 </body>
 </html>
