added special ad

--- a/index.html
+++ b/index.html
@@ -246,6 +246,20 @@
 
     </section>
 
+    <section id="special-ad">
+        <div>
+            <img src="images/yellow-sneakers.png" alt="">
+            <div id="circle"></div>
+        </div>
+        <div id="aside-ad">
+            <h5>Oferta especial</h5>
+            <h3>Air Jordan edição de colecionador</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores animi illum aliquid magnam qui, ipsum porro veniam totam, consequuntur voluptas reprehenderit laboriosam, perferendis error id dignissimos ad numquam minima rem.</p>
+            <button>Ver ofertas</button>
+        </div>
+
+    </section>
+
     <!-- AQUI INICIA O FOOTER -->
     <footer class="main-footer">
         <div class="container">
