alterações no footer

--- a/index.html
+++ b/index.html
@@ -250,28 +250,28 @@
     <footer class="main-footer">
         <div class="container">
             <div class="logo-wraper">
-            <img src="Assets/Images/logo.svg" alt="Logo da Digital College">
-            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum eligendi iusto assumenda facere eius fugiat consequuntur, veniam corporis aperiam natus, exercitationem quo. Alias hic aut delectus, ipsa vel sit iusto?</P>
+            <img class="logo" src="Assets/Images/logo.svg" alt="Logo da Digital College">
+            <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</P>
             <ul>
                 <li>
                     <a href="#!"><i title="Facebook" class="fa-brands fa-facebook-square"></i>
-                    <img src="Assets/Images/Facebook.png" alt="">
+                    <img class="social" src="Assets/Images/Facebook.png" alt="">
                     </a>
                 </li>
                 <li>
                     <a href="#!"><i title="Instagram" class="fa-brands fa-instagram-square"></i>
-                    <img src="Assets/Images/Instagram.png" alt="">
+                    <img class="social" src="Assets/Images/Instagram.png" alt="">
                     </a>
                 </li>
                 <li>
                     <a href="#!"><i title="Twitter" class="fa-brands fa-twitter-square"></i>
-                    <img src="Assets/Images/Twitter.png" alt="">
+                    <img class="social" src="Assets/Images/Twitter.png" alt="">
                     </a>
                 </li>
             </ul>
             </div>
-        </div>
-        <div class="nav-list-wraper">
+            </div>
+            <div class="nav-list-wraper">
             <nav class="navOne">
                 <h5>Informação</h5>
                 <ul>
@@ -283,7 +283,7 @@
                     <li><a href="#!">Meus pedidos</a></li>
                 </ul>
             </nav>
-            <nav class="NavTwo">
+            <nav class="navTwo">
                 <h5>Categorias</h5>
                 <ul>
                     <li><a href="#!">Camisetas</a></li>
@@ -293,17 +293,20 @@
                     <li><a href="#!">Tênis</a></li>
                 </ul>
             </nav>
-            <div class="DivContact">
+            <div class="divContact">
                 <h5>Contato</h5>
                 <ul>
                     <li>Av. Santos Dumont, 1510 - 1 andar - Aldeota, Fortaleza - CE, 60150-161</li>
                     <li>(85) 3051-3411</li>
                 </ul>
             </div>
+            <div class="rectangle">
+                <img class="ret" src="Assets/Images/Rectangle.png" alt="">
+            </div>
             <div class="copyrights">
                 <p>@ 2023 Digital College</p>
             </div>
-        </div>
+            </div>
     </footer>
 
 </body>
