--- a/index.html
+++ b/index.html
@@ -38,23 +38,25 @@
         </nav>
     </header>
     
- <!-- AQUI INICIA O BANNER -->
-    <div id="banner">
+<!--AQUI INICIA O BANNER-->
+<div id="banner">
         <div class="texts">
             <h5>Melhores ofertas personalizadas</h5>
             <h1>Queima de Estoque Nike 🔥</h1>
             <p>Consequat culpa exercitation mollit nisi excepteur do do tempor laboris eiusmod irure consectetur</p>
-            <button><a href="" style="color: #FFFFFF"> Ver Ofertas</a></button>
+            <a href="#!">Ver Ofertas</a>
         </div>
         <div class="sneakers">
-            <img src="images/Banner/White-Sneakers-PNG-Clipart 1.png" alt="">   
-            <button id="elipse1"><a href="" style="color: #C92071;">⬤</a></button>
-            <button id="elipse2"><a href="" style="color: #CCCCCC;">⬤</a></button>
-            <button id="elipse3"><a href="" style="color: #CCCCCC;">⬤</a></button>
-            <button id="elipse4"><a href="" style="color: #CCCCCC;">⬤</a></button>
+            <img src="images/Banner/White-Sneakers-PNG-Clipart 1.png" alt="">
         </div>
         <div class="ornament">
             <img src="images/Banner/Ornament 11.png" alt="">
+        </div>
+        <div id="elipse">
+            <button class="active">⬤</button>
+            <button>⬤</button>
+            <button>⬤</button>
+            <button>⬤</button>
         </div>
     </div>
     <!-- AQUI TERMINA O BANNER -->
