--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FooterProject</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/footer.css" />
+</head>
+<body>
     <footer class="main-footer">
-      <div class="footer-wrapper">
-        <div class="container">
-          <div class="logo-wraper">
-            <img
-              class="logo"
-              src="Assets/Images/logo.svg"
-              alt="Logo da Digital College"
-            />
+    <div class="footer-wrapper">
+        <div class="footer-container">
+        <div class="logo-wraper">
+            <div class="footer-logo">
+                <img src="images/Banner/Vector-logo.svg" alt="Logo da Digital College"/>
+                <span>Digital Store</span>
+            </div>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore.
             </p>
-            <ul>
-              <li>
+            <ul class="footer-lists">
+            <li>
                 <a href="#!"
                   ><i title="Facebook" class="fa-brands fa-facebook-square"></i>
-                  <img class="social" src="Assets/Images/Facebook.png" alt="" />
+                  <img class="social" src="images/Banner/facebook.png" alt="" />
                 </a>
               </li>
               <li>
@@ -36,7 +36,7 @@
                   ></i>
                   <img
                     class="social"
-                    src="Assets/Images/Instagram.png"
+                    src="images/Banner/instagram.png"
                     alt=""
                   />
                 </a>
@@ -44,14 +44,14 @@
               <li>
                 <a href="#!"
                   ><i title="Twitter" class="fa-brands fa-twitter-square"></i>
-                  <img class="social" src="Assets/Images/Twitter.png" alt="" />
+                  <img class="social" src="images/Banner/twitter.png" alt="" />
                 </a>
               </li>
             </ul>
           </div>
           <nav class="navOne">
             <h5>Informação</h5>
-            <ul>
+            <ul class="footer-lists">
               <li><a href="#!">Sobre Drip Store</a></li>
               <li><a href="#!">Segurança</a></li>
               <li><a href="#!">Whishlist</a></li>
@@ -62,7 +62,7 @@
           </nav>
           <nav class="navTwo">
             <h5>Categorias</h5>
-            <ul>
+            <ul class="footer-lists">
               <li><a href="#!">Camisetas</a></li>
               <li><a href="#!">Calças</a></li>
               <li><a href="#!">Bonés</a></li>
